--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.2"
   }
 }
